--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,14 @@
   color: #61dafb;
 }
 
-.Shuffle-button {
-  margin-top: 10px
+.Loot-select {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 @keyframes App-logo-spin {
