--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,12 @@
     color: white;
 }
 
+.popup {
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
